--- a/css/style_css.css
+++ b/css/style_css.css
@@ -4,7 +4,7 @@
 }
 
 .wrapper {
-    display: flex;
+    display:
 
     width: 100%;
     height: 1000px;
@@ -26,8 +26,7 @@
 
 .logo {
     display: flex;
-    align-items: center;
-    background-color: blue
+    background-color: blue;
 }
 
 .menu {
@@ -36,29 +35,51 @@
 }
 
 .education {
-    display: flex;
+    display: 
     background-color: green
 }
 
+.kub1 {
+    display: 
+    justify-content: center;
+}
+.kub1-fon {
+    height: 480px;
+    width: 480px;
+    background-color: #BA9898;
+    transform matrix(0.71, 0.67, -0.74, 0.71, 0,0)
+}
+.kub2-fon {
+    height: 206.36px;
+    width: 206.36px;
+    background-color: #BACBDC;
+    transform matrix(0.71, 0.67, -0.74, 0.71, 0,0)
+}
+
 .education2 {
-    display: flex;
-background-color: yellow
+        background-color: yellow;
+        
 }
 
-.education2_0{
-    display: flex;
+.edu_center{
+    text-align: center;
 }
+.education2_0 {
+    display: flex;
+    justify-content: space-around;
+}
+
 .education2_1 {
-
     background-color: greenyellow
-    }
+}
 
 .education2_2 {
     background-color: darkorange
-    }
+}
+
 .education2_3 {
     background-color: cornflowerblue
-    }    
+}    
 
 .education3 {
 background-color: burlywood  
@@ -68,20 +89,38 @@ background-color: burlywood
     text-align: center;
 }
 
-.education4 {
-    background-color: fuchsia     
-    }
-
-.slaider-text {
-text-align: center;
+.kub3_2 {
+    background-color: #432132;
 }
+
+.fon_slaider {
+    display: flex;
+    justify-content: center;
+    background-color: fuchsia; 
+
+}
+.education4 {
+            text-align: center;  
+}
+
+.slaider {
+    display: flex;
+    flex-wrap: wrap;
+}
+.slaider-text {
+    width: 690px;
+    height: 125px;
+    text-align: center;
+    background-color: blueviolet;
 
 }
 
 .about {
-        background-color: khaki      
-    }
+        background-color: khaki ;   
+            display: flex;
+            justify-content: space-around;  
+}
 
 .footer {
         background-color: sienna    
-    }
+}
