--- a/css/style_css.css
+++ b/css/style_css.css
@@ -5,15 +5,15 @@
 
 .wrapper {
     width: 100%;
-    height: 1000px;
+    max-width: 1510px;
+    margin: 0 auto;
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: white;
+    
 }
-
 .contacts {
     display: flex;
     justify-content: space-between;
@@ -81,25 +81,48 @@
     display: table-cell;
     text-align: center;
 }
+.line {
+text-decoration: none;
+color: #000000;
+}
 
+a.line:hover {
+    border-top: 2px solid black;
+    transition-property: all;
+    transition-duration: 200ms;
+}
 .education {
     width: 100%;
     background-color:white;
    overflow: hidden;
 }
-.kub1 {
+.kub_white {
     position: absolute;
-    z-index: 1;
+    width: 600px;
+    height: 600px;
+    transform: rotate(45deg);
+    background-color: white;
+    left: 15%;
+    top: 500px;
+
+}
+.kub1 {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: relative;
+    width: 600px;
+    height: 600px;   
 }
 
 .kub1_bordo {
-    position: relative;
+    position: absolute;
     height: 480px;
     width: 480px;
     background-color: #BA9898;
-    transform: rotate(45deg);
-    margin-left: 325px;
-    margin-top: 150px;
+    transform: rotate(0deg);
+    top: 0;
 }
 .kub1_seryi {
     position: absolute;    
@@ -116,8 +139,8 @@
     background: white;
 }
 .bordo_flex {
-    width: 400px;
-    height: 400px;
+    width: 480px;
+    height: 480px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -132,8 +155,21 @@ line-height: 31px;
 font-size: 18px;
 text-align: center;
 }
-.button {
+
+button {
     transform: rotate(-45deg);
+    background-color:  #BA9898;
+    width: 210px;
+    height: 45px;
+    font-family: Ubuntu;
+font-style: normal;
+font-weight: normal;
+line-height: 31px;
+font-size: 18px;
+text-align: center;
+border: 1px solid #000000;
+box-sizing: border-box;
+box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
 
 .kub2 {
@@ -199,6 +235,8 @@ flex-direction: column;
 }
 .kub4 {
     position: absolute;
+    bottom: 0;
+    right: 0;
    
 }
 .kub_foto_house {
@@ -216,7 +254,8 @@ flex-direction: column;
     left: -195px;
 }
 .education2 {
-        background-color: yellow;
+        background-image: url(../img/img_sea_background.png);
+        width: 100%;
         color: white;
         
 }
@@ -371,19 +410,60 @@ color: white;
     
 }
 .bordo_container {
-    position: absolute;
     transform: rotate(45deg);
     margin-left: 800px;
 }
+.container_teacher {
+    width: 228px;
+    height: 228px;
+    position: relative;
+    overflow: hidden;
+    transform: rotate(45deg);
+}
+.foto_teacher {
+    position: absolute;
+    transform: rotate(-45deg);
+    top: 0;
+
+}
+.white_teacher {
+    width: 30px;
+    height: 30px;
+    background-color: white;
+}
+.blue_teacher {
+    width: 60px;
+    height: 60px;
+    background-color: #112132;
+}
+.container_cabinet {
+    width: 615px;
+    height: 615 px;
+    background-image: url(/../img/img_cabinet.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;     
+}
+
 .fon_slaider {
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    width: 100%;    
+    background-image: url(../img/img_sea_background.png);
+}
+.gradient_slaider {
+    width: 100%;
+    height: 1000px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     background: linear-gradient(180deg, rgba(30, 30, 30, 0.8) 0%,
-            rgba(16, 16, 16, 0) 54.14%, rgba(16, 16, 16, 0) 54.15%, 
-            rgba(2, 2, 2, 0.6) 100%); 
-    
+    rgba(16, 16, 16, 0) 54.14%, rgba(16, 16, 16, 0) 54.15%, 
+    rgba(2, 2, 2, 0.6) 100%); 
+    background-size: contain;   
 }
 .text_padding {
     padding: 50px;
@@ -557,15 +637,19 @@ color: white;
     width: 100%;
     background: rgba(0, 0, 0, 0.4);
     position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .map {
     width: 100%;
+    height: auto;     
     max-width: 1510px;
     margin: 0 auto;
     z-index: -1;
     position: absolute;
-
 }
 
 
