--- a/css/style_css.css
+++ b/css/style_css.css
@@ -304,7 +304,16 @@ line-height: normal;
 font-size: 14px;
 text-decoration-line: underline;
 }
+.line_white {
+    color: white;
+    text-decoration: none;
+}
 
+a.line_white:hover {
+    border-bottom: 2px solid white;
+    transition-property: all;
+    transition-duration: 200ms;
+}
 .rombik {
     position: relative;
     width: 11px;
@@ -446,16 +455,31 @@ color: white;
 }
 
 .fon_slaider {
+    position: relative;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     width: 100%;    
+    min-height: 670px;
+    height: 1px;
     background-image: url(../img/img_sea_background.png);
 }
+.slaider_index {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    z-index: 2;
+    padding: 5px;
+}
 .gradient_slaider {
+    position: absolute;
+    top: 0;
+    bottom: 0;
     width: 100%;
-    height: 1000px;
+    height: 100%;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -464,6 +488,7 @@ color: white;
     rgba(16, 16, 16, 0) 54.14%, rgba(16, 16, 16, 0) 54.15%, 
     rgba(2, 2, 2, 0.6) 100%); 
     background-size: contain;   
+   
 }
 .text_padding {
     padding: 50px;
@@ -515,25 +540,15 @@ color: white;
     
 }
 .container_strelka {
-    width: 930px;
-    height: 100px;
+    position: absolute;
+    width: 850px;
+    width: 850px;
+    height: 35px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    background-color: magenta;
+    justify-content: space-between;
 }
-.strelka1 {
-    width: 20px;
-    height: 20px;
-    border: 3px solid #FFFFFF;
-transform: rotate(45deg);
-}
-.strelka2 {
-    width: 20px;
-    height: 20px;
-    border: 3px solid #FFFFFF;
-transform: rotate(-134.43deg);
-}
+   
 .text_bold {
     font-weight: bold;
     margin: 20px;
@@ -645,11 +660,12 @@ color: white;
 
 .map {
     width: 100%;
-    height: auto;     
-    max-width: 1510px;
+    height: inherit;     
     margin: 0 auto;
     z-index: -1;
     position: absolute;
+    top: 0;
+    bottom: 0;
 }
 
 
