--- a/css/style_css_2.css
+++ b/css/style_css_2.css
@@ -10,6 +10,7 @@
     width: 100%;
     max-width: 1510px;
     background-color: blue;
+    position: relative;
 }
 
 .menu_flex {
@@ -74,6 +75,9 @@
     height: 300px;
     background: #BA9898;
     transform: rotate(45deg);
+    margin-top: -150px;
+    margin-left: 65px;
+    position: absolute;
 }
 .tel {
     ffont-family: 'Ubuntu', sans-serif;
